Upload de Ejercicio_1 incluyendo el boton regresar

--- a/Ejercicio_1.css
+++ b/Ejercicio_1.css
@@ -35,3 +35,10 @@ span.texto_cursiva{
     background-color: #000;
     font-style: italic;
 }
+
+.back{
+    text-decoration: none;
+    color: black;}
+    .back:hover{
+        text-decoration: underline;
+}
