--- a/Ejercicio_14.css
+++ b/Ejercicio_14.css
@@ -84,17 +84,13 @@ div{
         font-size: 40px;
 }
 
-.back{
-    margin: 120px;
-    margin-top: 20px;
+.regresar{
+    border-radius: 50%;
+    border: dashed black;
+}
+
+.regresar a{
+    text-align: center;
     text-decoration: none;
-    color: white;
-    background-color: rgb(17, 92, 110);
-    border-radius: 15%;
-    height: 150px;
-    width: 450px;
-    font-size: 25px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
-    .back:hover{
-        text-decoration: underline;
+    color: black;
 }
