Actualización de boton
Se actualiza la funcióón regresar a pagina principal del sitio general

--- a/Ejercicio_4.css
+++ b/Ejercicio_4.css
@@ -19,3 +19,16 @@
 .magno{
     list-style-type: lower-greek;
 }
+
+.back{
+    text-decoration: none;
+    color: white;
+    background-color: rgb(17, 92, 110);
+    border-radius: 15%;
+    height: 150px;
+    width: 450px;
+    font-size: 25px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
+    .back:hover{
+        text-decoration: underline;
+}
