--- a/Ejercicio_3.css
+++ b/Ejercicio_3.css
@@ -23,4 +23,15 @@ ul li a:active{
     text-decoration: none;
 }
 
-
+.back{
+    text-decoration: none;
+    color: white;
+    background-color: rgb(17, 92, 110);
+    border-radius: 15%;
+    height: 150px;
+    width: 450px;
+    font-size: 25px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
+    .back:hover{
+        text-decoration: underline;
+}
