--- a/Ejercicio_5.css
+++ b/Ejercicio_5.css
@@ -26,3 +26,15 @@ li a:focus{
     outline: 2px solid red;
 }
 
+.back{
+    text-decoration: none;
+    color: white;
+    background-color: rgb(17, 92, 110);
+    border-radius: 15%;
+    height: 150px;
+    width: 450px;
+    font-size: 25px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
+    .back:hover{
+        text-decoration: underline;
+}
