Actualización de master
Se actuaizan estilos y cantidad de ejercicios

--- a/style.css
+++ b/style.css
@@ -1,27 +1,31 @@
 :root{
-    background-color: rgba(156, 153, 146, 0.788);
+    background-color: rgb(0, 0, 0);
 }
 
 .html
 
 *{
-    background-color: rgba(156, 153, 146, 0.788);
+    background-color: rgb(0, 0, 0);
 }
 
 h1{
-    text-align: center;
+    /* text-align: center; */
+    color: white;
+    font-size: 35px;
     font-family: 'Courier New', Courier, monospace;
 }
 
 li{
     font-size: 25px;;
     list-style-type: square;
+    color: rgb(255, 255, 255);
+    
 }
 
 a{
     font-size: 25px;
     text-decoration: solid;
-    color: black;
+    color: white;
 }
 
 li:hover{
@@ -30,9 +34,20 @@ li:hover{
 
 a:hover{
     text-decoration: underline;
+    color:  rgb(0, 255, 157);
 }
 
+.elementos{
+    margin: auto;
+}
 
+.elementos::before, .elementos::after, .elementos{
+    position: absolute;
+    top: 100%;
+    bottom: 10%;
+    left: 0;
+    right: 0;
+}
 
 
 
@@ -56,3 +71,66 @@ a:hover{
     border: red 5px solid;
 } */
 
+
+
+.animación{
+    width: 200px;
+    height: 200px;
+    margin: auto;
+    font-size: 30px;
+    text-align: center;
+    /* background-image: url(/signo-de-dolar.png); */
+    color: rgb(250, 250, 250);
+    box-shadow: 0 0 0 5px rgb(0, 255, 157);
+  }
+  
+  p{
+    margin-top: 35%;
+  }
+  
+.animación::before, .animación::after, .animación{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+  
+.animación::before, .animación::after{
+    content: "";
+    z-index: -1;
+    margin: -5%;
+    box-shadow: inset 0 0 0 5px;
+    animation: borde 6s linear infinite;
+}
+  
+.animación::before{
+    animation-delay: -3s;
+}
+  
+@keyframes borde {
+    0%, 100%{
+      clip: rect(0px, 220px, 2px, 0px);
+      transform: scale(1.2);
+    }
+    25%{
+      clip: rect(0px, 2px, 220px, 0px );
+      transform: scale(1.2);
+    }
+    50%{
+      clip: rect(218px, 220px, 220px, 0px);
+      transform: scale(1.2);
+    }
+    75%{
+      clip: rect(0px, 220px, 220px, 218px);
+      transform: scale(1.2);
+    }
+  }
+
+  footer{
+    margin-top: 100%;
+    margin-bottom: 1%;
+    height: 20px;
+    color: rgb(0, 255, 157);
+    background-color: rgb(0, 0, 0);
+}
