--- a/Ejercicio_14.css
+++ b/Ejercicio_14.css
@@ -1,3 +1,7 @@
+*{
+    background-color: black;
+}
+
 div{
     height: 180px;
     width: 180px;
@@ -77,7 +81,8 @@ div{
     }
 
 ._10_{
-    background-color: black;
+    background-color: rgb(255, 255, 255);
+    color: black;
     transition: all linear 2s;}
     ._10_:hover{        
         padding: 150px;
@@ -86,11 +91,11 @@ div{
 
 .regresar{
     border-radius: 50%;
-    border: dashed black;
+    border: dashed rgb(255, 255, 255);
 }
 
 .regresar a{
     text-align: center;
     text-decoration: none;
-    color: black;
+    color: rgb(255, 255, 255);
 }
