--- a/Ejercicio_1.css
+++ b/Ejercicio_1.css
@@ -36,15 +36,14 @@ span.texto_cursiva{
     font-style: italic;
 }
 
-.back{
-    text-decoration: none;
-    color: white;
-    background-color: rgb(17, 92, 110);
-    border-radius: 15%;
-    height: 150px;
-    width: 450px;
-    font-size: 25px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
-    .back:hover{
-        text-decoration: underline;
+.regresar{
+    margin-top: 200px;
+    text-align: center;
+    font-size: 25px;}
+    .back{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-decoration: none;
+        color: black;}
+        .back:hover{
+            text-decoration: underline;
 }
