--- a/Ejercicio_9.css
+++ b/Ejercicio_9.css
@@ -42,15 +42,14 @@ legend{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.back{
-    text-decoration: none;
-    color: white;
-    background-color: rgb(17, 92, 110);
-    border-radius: 15%;
-    height: 150px;
-    width: 450px;
-    font-size: 25px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
-    .back:hover{
-        text-decoration: underline;
+.regresar{
+    margin-top: 100px;
+    text-align: center;
+    font-size: 25px;}
+    .back{
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-decoration: none;
+        color: rgb(192, 7, 7);}
+        .back:hover{
+            text-decoration: underline;
 }
