--- a/style.css
+++ b/style.css
@@ -134,3 +134,57 @@ a:hover{
     color: rgb(0, 255, 157);
     background-color: rgb(0, 0, 0);
 }
+
+
+body {
+    color: #000;
+    margin: 0;
+    font-family: "Lucida Console", Monaco, monospace;
+  }
+  
+  .container {
+    background: rgb(0, 0, 0);
+    height: 10vh;
+    padding: 20px;
+    margin-top: 75%;
+    text-align: center;
+    
+  }
+  
+  .content {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-top: 155%;
+    transform: translate(-50%, -50%);
+  }
+  .content p {
+    margin: 0 0 200px;
+  }
+  
+  /* Arrow & Hover Animation */
+  #more-arrows {
+    width: 75px;
+    height: 65px;
+  }
+  #more-arrows:hover polygon {
+    fill: rgb(0, 255, 157);
+    transition: all 0.2s ease-out;
+  }
+  #more-arrows:hover polygon.arrow-bottom {
+    transform: translateY(-18px);
+  }
+  #more-arrows:hover polygon.arrow-top {
+    transform: translateY(18px);
+  }
+  
+  polygon {
+    fill: rgb(0, 255, 157);
+    transition: all 0.2s ease-out;
+  }
+  polygon.arrow-middle {
+    opacity: 0.75;
+  }
+  polygon.arrow-top {
+    opacity: 0.5;
+  }
