--- a/Responsive/style.css
+++ b/Responsive/style.css
@@ -4,6 +4,7 @@
     text-decoration: none;
     background-color: #ffffff;
     /* background-color: white; */
+    box-sizing: border-box;
 }
 
 body{
@@ -223,6 +224,27 @@ iframe{
     margin-right: 1px;
  } 
 
+ #check {
+    display: none;
+} 
+.checkbtn {
+    font-size: 40px;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
+}
+
+.footer{
+    background-color: #fbfee5; 
+    line-height: 50px; 
+    color: #6c5013; 
+    justify-content: center; 
+    text-align: center; 
+    font-weight: bold;
+}
+
 
 /*Dispositivos grandes (computadoras portátiles/computadoras de escritorio, 992px y arriba*/
 @media screen and (min-width: 992px) and (max-width: 1200px) {
@@ -327,64 +349,73 @@ iframe{
 
 /*Dispositivos pequeños (tabletas de retrato y teléfonos grandes, 600px y arriba)*/
 @media (max-width:768px) {
-    .logo {
-        width: 80px;
-        height: 15px;
+    nav{
+        height: 70px;
     }
 
-    nav {
-        height: 65px;
+    .logo{
+        height: 50px;
     }
 
-    .header_3{
-        float: left;
-        margin-left: 150px;
-        margin-top: 15px;
- } 
-
-    button {
-        margin-top: 25px;
-        height: 25px;
-        font-size: 13px;
-        background-size: 20px;
-    }
-
-    .login {
-        width: 75px;
-        float: left;
-
-    }
-
-    .checkbtn {
-        font-size: 30px;
-        display: block;
-    }
-
-    ul {
+    ul{
         position: fixed;
         width: 100%;
+        background: #ffffff;
         height: 100%;
-        top: 80px;
-        right: -10%;
-        background-color: #ffffff;
+        top: 70px;
+        right: -120%;
         text-align: center;
-        /* border: solid 1px; */
-        transition: all 1.5s;
+        transition: all 0.5s;
     }
+     
+    .checkbtn{
+        display: flex;
+        font-size: 30px;
+        position: fixed;
+        left: 90%;
+    } 
 
     nav ul li {
+        line-height: 50px;
+        background: #ffffff;
         display: block;
-        margin: 20px 0;
-        line-height: 30px;
+    }
+    nav ul li a{
+        width: 100%;
+        font-size: 15px;
+        background: #ffffff;
     }
 
-    #check:checked~ul {
-        left: 0;
+    #check:checked~ul{
+        right: -45px;
     }
-    *{
-        background-color: rgb(255, 255, 255);
+    .nav-inicio, .nav-productos, .nav-tiendas, .nav-contacto{
+        background-image: none;
+    } 
+    button {
+        height: 25px;
+        font-size: 10px;
+        position: relative;
+        right: -80%;
+    }
+    .carrito {
+        width: 120px;
+        background-size: 22px;
+    }
+    .log {
+        width: 55px;
+        background-size: 22px;
     }
 
+    .separacion_respon{
+        height: 50px;
+        width: 100%;
+        background-color: #ffffff;
+        float: left;
+    }
+
+
+    
     .section_1{
         width: 95%;        
     }
@@ -395,5 +426,17 @@ iframe{
         width: 95%;
     }
     
+    .tutorial_1{
+        float: none;
+        width: 95%;
+        height: 300px;
+    }
+    .tutorial_2{
+        height: 500px;
+        width: 95%;
+    }
 
+    .footer{
+        float: left;
+    }
 }
