--- a/Responsive/grid/Compras.css
+++ b/Responsive/grid/Compras.css
@@ -163,3 +163,19 @@ a{
     background-color: #ffffff;
     width: 100%;
 }
+
+
+
+
+@media (max-width:768px) {  
+
+    .grid-layout{
+        display: grid;
+        grid-template-columns: 30% 5% 65%;
+    }
+
+    a{
+        color: white;
+    }
+   
+}
