--- a/Responsive/sass/Carrito.css
+++ b/Responsive/sass/Carrito.css
@@ -236,15 +236,50 @@ a {
   }
   .caja_pago {
     width: 45%;
-    margin-left: 2%;
+    margin-left: 25%;
   }
   .caja_detalles {
     width: 60%;
+    margin-left: 18%;
   }
   .formulario {
     margin-right: 20%;
   }
   .c5 {
     height: 1000px;
+  }
+}
+@media (max-width: 550px) {
+  .grid-layout {
+    display: grid;
+    grid-template-columns: 30% 5% 65%;
+  }
+  a {
+    color: white;
+  }
+  .caja_registro {
+    width: 90%;
+    margin-left: 4%;
+  }
+  .caja_envio {
+    width: 90%;
+    margin-left: 4%;
+  }
+  .caja_pago {
+    width: 90%;
+    margin-left: 4%;
+  }
+  .c5 {
+    height: 1100px;
+  }
+  .formulario {
+    margin-right: 15%;
+  }
+  .caja_detalles {
+    height: 300px;
+    margin-left: 20%;
+  }
+  .detalles_estilos {
+    height: auto;
   }
 }/*# sourceMappingURL=Carrito.css.map */
