--- a/Responsive/sass/Product_to_Buy.css
+++ b/Responsive/sass/Product_to_Buy.css
@@ -1,9 +1,72 @@
 *{
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center  ;
 }
+.contenedor-galería{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: minmax(300px, auto);
+    gap: 20px;
+    padding: 20px;
+    /* encuentra la manera de agrupar todos las section a pesar de que los tamaños no sean uniformes */
+    grid-auto-flow: dense; 
+}
+
+.boton_f{
+    background-color: #0091e6;
+    height: 30px;
+    width: 140px;
+    color: white;
+    border-radius: 10px;
+    /* filter: blur(2px); */
+}
+
+.Imagen{
+    background-color: rgb(119, 184, 245);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out;
+    border: solid rgb(0, 0, 0) 2px;
+    background-position: center;
+
+}
+
+.Imagen:hover{
+    filter: opacity(0.9);
+    transform: scale(1.04);
+}
+
+.ancho{
+    grid-column: span 2;
+}
+
+.alto{
+    grid-row: span 2;
+}
+
+.img1{
+    background-image: url("/Responsive/Media/taladro.jpg");
+    /* filter: blur(2px); */
+}
+
+.img2{
+    background-image: url("/Responsive/Media/game.jpg");
+}
+.img3{
+    background-image: url("/Responsive/Media/phone.jpg");
+}
+.img4{
+    background-image: url("/Responsive/Media/laptop.jpg");
+}
+.img5{
+    background-image: url("/Responsive/Media/monitor2.jpg");
+}
+.img6{
+    background-image: url("/Responsive/Media/mouse1.jpg");
+}
+
+/* Estilos de menu y footer */
 
 .grid-layout{
     display: grid;
